--- a/package.json
+++ b/package.json
@@ -10,19 +10,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.8",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/core": "^6.1.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "i18next": "^21.6.10",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.25.1",
+    "react-i18next": "^11.15.3",
     "react-native": "0.64.3",
+    "react-native-elements": "^3.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
